# opc-studio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture.html  fly.toml  render.yaml  start.sh
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  seed.py
backend/app/agency/: __init__.py  auto_dispatch.py  bus.py  deliberate.py  delivery_score.py  proposal_actions.py  runner.py  signals.py
backend/app/api/: agent_runs.py  artifacts.py  ceo.py  channels.py  clients.py  commitments.py  dashboard.py  deliberation.py  deps.py  events.py  finance.py  founder.py  health.py  hitl.py  inbox.py  mcp.py  meta.py  (+11 more)
backend/tests/: conftest.py  test_agency.py  test_agency_phase_c.py  test_aggregates.py  test_artifact_repair.py  test_artifact_workflow.py  test_avatar_channels.py  test_brief_classification.py  test_ceo_brief.py  test_ceo_review.py  test_ceo_turn.py  test_channels_feishu.py  test_channels_wechat.py  test_commitments.py  test_context_directives.py  test_dashboard_contract.py  test_deliverables.py  test_directive_dispatch.py  test_directives.py  test_dispatch_feed.py  test_dispatch_planner.py  test_dispatch_rules.py  test_finance_export.py  test_finance_sync.py  test_finance_v2.py  test_founder_profile.py  test_health.py  test_hitl_approve.py  test_hitl_reject.py  test_inbox_dedup.py  test_ingress_documents.py  test_intake_service.py  test_llm_temperature.py  test_llm_test.py  test_mcp_bridge.py  test_media_client.py  test_ops_status.py  test_orchestrator.py  test_overview_presenter.py  test_presentation.py  (+17 more)
(+227 files in other folders)
